[project]
name = "pcap2cert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.1",
    "pyshark>=0.6",
    "tqdm>=4.67.1",
]

[tool.setuptools.package-data]
pcap2cert = ["ciphers.json"]

[project.scripts]
pcap2cert = "pcap2cert.__main__:main"